--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
   },
   "require": {
     "php": ">=7.4.0 <8.2.0",
-    "getkirby/cms": "^3.6"
+    "getkirby/cms": "^3.6",
+    "getkirby/kql": "^1.0"
   },
   "scripts": {
     "start": [
