--- a/.github/workflows/deploy-backend.yaml
+++ b/.github/workflows/deploy-backend.yaml
@@ -1,11 +1,20 @@
-name: Build and Deploy
+name: Build and Deploy Backend
+
 on:
   push:
     branches:
       - main
+    paths:
+      - 'kirby-backend/**'
+      
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        # backend folder
+        working-directory: kirby-backend
+
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
