--- a/.github/workflows/deploy-backend.yaml
+++ b/.github/workflows/deploy-backend.yaml
@@ -8,7 +8,10 @@ on:
     paths:
       - 'kirby-backend/**'
       # See: https://www.edwardthomson.com/blog/github_actions_10_path_triggers.html
-      
+  
+  # Allows you to run this workflow manually from the Actions tab.
+  workflow_dispatch:
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
